<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_form"
        android:textSize="18sp"
        android:id="@+id/tv" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/Username"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="200sp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/tv1"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"
        android:id="@+id/et1"
        android:inputType="textPersonName"
        android:hint="@string/User"
        android:autofillHints="@string/User" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:text="@string/Password"
        android:id="@+id/tv2"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:layout_width="200sp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/tv2"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/et1"
        android:id="@+id/et2"
        android:hint="@string/Pass"
        android:inputType="textPersonName"
        android:autofillHints="password" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Submit"
        android:layout_below="@+id/et2"
        android:layout_marginTop="20dp"
        android:id="@+id/b1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:id="@+id/tv3"
        android:hint="@string/Detail"
        android:textSize="18sp"/>

</RelativeLayout>